Fix footer spacing and layout

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -170,7 +170,7 @@ body.no-scroll {
 }
 
 #about {
-  padding-bottom: 1.5rem;
+  padding-bottom: 3rem;
 }
 
 .wallets .button.copy-btn {
